Remove generic migration confirm completion